--- a/scrum/templates/base.html
+++ b/scrum/templates/base.html
@@ -1,72 +1,120 @@
 <html class="no-js">
 {% load staticfiles %}
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>{% block title %}{% endblock %}</title>
-<meta name="description" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="{% static 'stylesheets/bootstrap.css'%}" rel="stylesheet"/>
-<link href="{% static 'stylesheets/main.css'%}" rel="stylesheet"/>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>{% block title %}{% endblock %}</title>
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="{% static 'stylesheets/bootstrap.css'%}" rel="stylesheet"/>
+	<link href="{% static 'stylesheets/main.css'%}" rel="stylesheet"/>
 
 
 
-<script src="{% static 'javascripts/jquery.js' %}" type="text/javascript" charset="utf-8" ></script>
-<script src="{% static 'javascripts/bootstrap.js' %}" type="text/javascript" charset="utf-8" ></script>
-<script src="{% static 'javascripts/underscore.js' %}" type="text/javascript" charset="utf-8" ></script>
-<script src="{% static 'javascripts/backbone.js' %}" type="text/javascript" charset="utf-8" ></script>
-<script id="config" type="text/json">
-	{
-		"models": {},
-		"collections": {},
-		"views": {},
-		"router": null,
-		"apiRoot":"{% url 'api-root' %}",
-		"apiLogin":"{% url 'api-token' %}"
-	}
-</script>
-<script src="{% static 'MVC/app.js' %}" ></script>
-<script src="{% static 'MVC/models.js' %}" ></script>
-<script src="{% static 'MVC/views.js' %}" ></script>
-<script src="{% static 'MVC/routers.js' %}"></script>
+	<script src="{% static 'javascripts/jquery.js' %}" type="text/javascript" charset="utf-8" ></script>
+	<script src="{% static 'javascripts/bootstrap.js' %}" type="text/javascript" charset="utf-8" ></script>
+	<script src="{% static 'javascripts/underscore.js' %}" type="text/javascript" charset="utf-8" ></script>
+	<script src="{% static 'javascripts/backbone.js' %}" type="text/javascript" charset="utf-8" ></script>
+	<script id="config" type="text/json">
+		{
+			"models": {},
+			"collections": {},
+			"views": {},
+			"router": null,
+			"apiRoot":"{% url 'api-root' %}",
+			"apiLogin":"{% url 'api-token' %}"
+		}
+	</script>
+	<script src="{% static 'MVC/app.js' %}" ></script>
+	<script src="{% static 'MVC/models.js' %}" ></script>
+	<script src="{% static 'API/models.js' %}"></script>
+	<script src="{% static 'MVC/views.js' %}" ></script>
+	<script src="{% static 'MVC/routers.js' %}"></script>
 
-{% block script %}{% endblock %}
+	{% block script %}{% endblock %}
 
-<script type="text/html" id="home-template">
-	<h1>Welcome to my Scrum Board Project!</h1>
-</script>
+	<script type="text/html" id="home-template">
+		<h1>Welcome to my Scrum Board Project!</h1>
+		<h2>Your Sprints</h2>
+		<button class="add" type="submit">Add Sprint</button>
+		<% if (sprints != null ){ %>
+			<div class="sprints">
+				<% _.each(sprints.models,function(sprint){ %>
+					<a href="#sprint/<%- sprint.get('id') %>" class="sprint">
+						<span>DUE BY <%- sprint.get('end') %></span>
+						<p class="description"><%- sprint.get('description') %></p>
+					<div class="tasks"></div>
+					</a>
 
-<script type="text/html" id="login-template">
-	<form action="" method="post">
-	<label for="id_username">Username</label>
-	<input id="id_username" type="text" name="username"
-	maxlength="30" required />
-	<label for="id_password">Password</label>
-	<input id="id_password" type="password"
-	name="password" required />
-	<button type="submit">Login</button>
-	</form>
-</script>
+					<% }); %>
+				<% } else { %>
+					<h3 class="loading">Loading .... </h3>
+					<% } %>
+				</script>
+
+				<script type="text/html" id="sprint-template">
+					<% if (sprint !== null) { %>
+						<% if (!sprint.invalid) { %>
+							<h2><%- sprint.get('name') %></h2>
+							<span class="due-date">Due <%- sprint.get('end') %></span>
+							<p class="description"><%- sprint.get('description') %></p>
+							<div class="tasks"></div>
+							<% } else { %>
+								<h1>Sprint <%- sprint.get('id') %> not found.</h1>
+								<% } %>
+								<% } else { %>
+									<h1 class="loading">Loading...</h1>
+									<% } %>
+								</script>
+
+				<script type="text/html" id="login-template">
+					<form action="" method="post">
+						{% csrf_token %}
+						<label for="id_username">Username</label>
+						<input id="id_username" type="text" name="username"
+						maxlength="30" required />
+						<label for="id_password">Password</label>
+						<input id="id_password" type="password"
+						name="password" required />
+						<button type="submit">Login</button>
+					</form>
+				</script>
 
 
-<script type="text/html" id="header-template">
+				<script type="text/html" id="header-template">
 
-<span class="title">Scrum Board Example</span>
-<% if (authenticated ) { %>
-<nav>
-<a href="/" class="button">Your Sprints</a>
-<a href="#" class="logout button">Logout</a>
-</nav>
-<% } %>
-</script>
+					<span class="title">Scrum Board Example</span>
+					<% if (authenticated ) { %>
+						<nav>
+							<a href="/" class="button">Your Sprints</a>
+							<a href="#" class="logout button">Logout</a>
+						</nav>
+						<% } %>
+					</script>
 
-</head>
 
-<body>
-	{% include 'layout/_header.html' %}
+					<script type="text/html" id="new-sprint-template">
+						<form action="" method="post">
+							{% csrf_token %}
+							<label for="id_name">Sprint Name</label>
+							<input id="id_name" type="text" name="name" maxlength="100" required />
+							<label for="id_end">End Date</label>
+							<input id="id_end" type="date" name="end" />
+							<label for="id_description">Description</label>
+							<textarea id="id_description" name="description" cols="50"></textarea>
+							<button class="cancel">Cancel</button>
+							<button type="submit">Create</button>
+						</form>
+					</script>
 
-	{% block content %}{% endblock %}
+				</head>
 
-	{% include 'layout/_footer.html' %}
-</body>
-</html>
+				<body>
+
+					{% include 'layout/_header.html' %}
+
+					{% block content %}{% endblock %}
+
+					{% include 'layout/_footer.html' %}
+				</body>
+				</html>
