update view and event for follow tweet

--- a/book/templates/user_profile.html
+++ b/book/templates/user_profile.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load staticfiles %}
+
 
 {% block content %}
 	<div class="row clearfix">
@@ -27,3 +29,5 @@
 		</div>
 	</div>
 {% endblock %}
+
+
