--- a/book/templates/base.html
+++ b/book/templates/base.html
@@ -14,14 +14,14 @@
 	<script type="text/javascript" src="{% static 'javascripts/bootstrap.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'javascripts/js.cookie.js' %}"></script>
 
-	{% block js %}
-	{% endblock %}
 </head>
 <body>
-	
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	{% block header %}
 		{% include 'layout/_header.html' %}
 	{% endblock %}
+	</nav>
+
 	<div class="container">
 	{% block content %}
 	{% endblock %}
@@ -29,6 +29,9 @@
 
 	{% block footer %}
 		{% include 'layout/_footer.html' %}
+	{% endblock %}
+
+	{% block js %}
 	{% endblock %}
 </body>
 </html>
