--- a/book/templates/layout/_header.html
+++ b/book/templates/layout/_header.html
@@ -1,4 +1,9 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 <a class="navbar-brand" href="#">MyTweets</a>
-<p class="navbar-text navbar-right">User Profile Page</p>
-</nav>
+<p class="navbar-text navbar-right">
+	<span class="glyphicon glyphicon-user"></span>
+	{{ user.username }}
+</p>
+<p class="navbar-text navbar-right">
+	<span class="glyphicon glyphicon-user"></span>
+	{{ user.username }}
+</p>
